adding templates to webpage

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,9 @@
-<!doctype html>
 <html>
-<h1>UNH698 Website</h1>
-<a href="jujitsu.html">jujitsu</a> 
+<head>
+</head>
+<body>
+<a href={{url_for('jujitsu')}}>Jujitsu</a>
+<br/>
+<p>UNH698 Website</p>
+</body>
 </html>
